objects/FieloEE__Redemption__c.object
<CustomObject>
    <description>Redemption orders as well as open shopping carts.</description>
    <fields>
        <fullName>FieloEE__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Member__c</fullName>
        <description>Member who redeemed the reward</description>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Redemptions</relationshipLabel>
        <relationshipName>Redemptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloEE__Origin__c</fullName>
        <description>Where the redemption was made: in the back end, in the front end or via a mobile device.</description>
        <inlineHelpText>Indicate whether the redemption was made via the back end, the front end or a mobile device.</inlineHelpText>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BackEnd</fullName>
                </value>
                <value>
                    <fullName>FrontEnd</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__PointsDiscount__c</fullName>
        <label>Points Discount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Points__c</fullName>
        <description>Points involved on the redemption</description>
        <label>Points</label>
        <summarizedField>FieloEE__RedemptionItem__c.FieloEE__ItemPoints__c</summarizedField>
        <summaryFilterItems>
            <field>FieloEE__RedemptionItem__c.FieloEE__Status__c</field>
            <operation>notEqual</operation>
            <value>Reverted</value>
        </summaryFilterItems>
        <summaryForeignKey>FieloEE__RedemptionItem__c.FieloEE__Redemption__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloEE__Price__c</fullName>
        <description>Price of the reward in the moment that the reward was redeemed.</description>
        <label>Price</label>
        <summarizedField>FieloEE__RedemptionItem__c.FieloEE__RewardItemPrice__c</summarizedField>
        <summaryForeignKey>FieloEE__RedemptionItem__c.FieloEE__Redemption__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloEE__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Status__c</fullName>
        <description>The status of this redemption. Possible status values are: Open, Closed, Pending or Rejected.</description>
        <inlineHelpText>Here you can see the redemption status. Redemptions can be Open, Closed, Pending or Rejected. Press the Help button above for more info.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__TotalItems__c</fullName>
        <description>Quantity of items of the redemption (Order).</description>
        <label>Total Items</label>
        <summaryForeignKey>FieloEE__RedemptionItem__c.FieloEE__Redemption__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloEE__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>FieloEE__Transaction__c</referenceTo>
        <relationshipLabel>Redemptions</relationshipLabel>
        <relationshipName>Redemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Redemption</label>
    <listViews>
        <fullName>FieloEE__All_Redemptions</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Member__c</columns>
        <columns>FieloEE__TotalItems__c</columns>
        <columns>FieloEE__Origin__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Redemptions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__Closed</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Member__c</columns>
        <columns>FieloEE__Origin__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__Price__c</columns>
        <columns>FieloEE__Status__c</columns>
        <columns>FieloEE__TotalItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloEE__Status__c</field>
            <operation>equals</operation>
            <value>Close</value>
        </filters>
        <label>Closed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__Open</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Member__c</columns>
        <columns>FieloEE__Origin__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__Price__c</columns>
        <columns>FieloEE__Status__c</columns>
        <columns>FieloEE__TotalItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloEE__Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__Pending</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Member__c</columns>
        <columns>FieloEE__Origin__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__Price__c</columns>
        <columns>FieloEE__Status__c</columns>
        <columns>FieloEE__TotalItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloEE__Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__Rejected</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Member__c</columns>
        <columns>FieloEE__Origin__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__Price__c</columns>
        <columns>FieloEE__Status__c</columns>
        <columns>FieloEE__TotalItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloEE__Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__This_Week</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Member__c</columns>
        <columns>FieloEE__Origin__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__Price__c</columns>
        <columns>FieloEE__Status__c</columns>
        <columns>FieloEE__TotalItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OR-{000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemption</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloEE__Closed_Order</fullName>
        <active>false</active>
        <errorConditionFormula>AND(   ISPICKVAL(FieloEE__Status__c, &apos;Close&apos;) ,ISCHANGED(FieloEE__Points__c) )</errorConditionFormula>
        <errorMessage>The order is closed.</errorMessage>
    </validationRules>
</CustomObject>